--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ project_urls =
 
 [options]
 packages = find:
-python_requires = >=3.8
+python_requires = >=3.8,<3.10
 setup_requires =
     setuptools >=38.3.0
     setuptools_scm
