--- a/.github/workflows/build_pkg.yml
+++ b/.github/workflows/build_pkg.yml
@@ -1,29 +1,29 @@
 name: build
 on:
-  # Trigger the workflow on push events on master and tags
   push:
     branches:
       - master
     tags:
       - '*'
-  # Trigger the workflow on relevant pull request events
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
     paths-ignore:
       - 'CHANGELOG.md'
       - 'doc/**'
       - '!.github/workflows/build.yml'
-  # Trigger the workflow on all release created events (this could redirect to main conda channel)
   release:
     types:
       - created
-  # Run every Monday at 6am UTC
   schedule:
     - cron: '0 6 * * 1'
+  workflow_dispatch:
 
 jobs:
   conda:
-    if: github.event.pull_request.draft == false # exclude job from draft PR
+    if: |
+      (github.event.pull_request.draft == false) ||
+      (github.event_name == 'workflow_dispatch') ||
+      (github.ref == 'refs/heads/master')
     name: conda build
     runs-on: ubuntu-latest
     steps:
@@ -63,7 +63,9 @@ jobs:
         run: conda mambabuild .
 
   pypi:
-    if: github.event.pull_request.draft == false # exclude job from draft PR
+    if: |
+      (github.event.pull_request.draft == false) ||
+      (github.event_name == 'workflow_dispatch')
     name: pypi build
     runs-on: ubuntu-latest
     steps:
