--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,23 +1,23 @@
 name: documentation
 on:
-  # Trigger the workflow on push events on master
   push:
     branches:
       - master
-  # Trigger the workflow on relevant pull request events
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
-  # Trigger the workflow on all release created events (this could redirect to main conda channel)
   release:
     types:
       - created
-  # Run every Monday at 6am UTC
   schedule:
     - cron: '0 6 * * 1'
+  workflow_dispatch:
 
 jobs:
   build:
-    if: github.event.pull_request.draft == false # exclude job from draft PR
+    if: |
+      (github.event.pull_request.draft == false) ||
+      (github.event_name == 'workflow_dispatch') ||
+      (github.ref == 'refs/heads/master')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
