--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -12,15 +12,6 @@ on:
     - cron: '0 6 * * 1'
 
 jobs:
-  detect-ci-trigger: # only run win/mac pytest job if review PR or on master
-    name: Detect CI Trigger
-    runs-on: ubuntu-latest
-    outputs:
-      triggered: ${{ steps.detect-trigger.outputs.trigger-found }}
-    steps:
-      - id: detect-trigger
-        run: echo "::set-output name=trigger-found::${{ github.event.pull_request.draft == false || github.ref == 'refs/heads/master' }}"
-
   event_file:
     name: "Upload PR Event File"
     runs-on: ubuntu-latest
@@ -64,7 +55,7 @@ jobs:
           pytest -n 2 --runslow --junit-xml pytest.xml
 
       - name: Upload Test Results
-        if: always() && (matrix.py == '3.8')
+        if: always() && (matrix.py == '3.9')
         uses: actions/upload-artifact@v2
         with:
           name: Unit Test Results
@@ -90,8 +81,10 @@ jobs:
 
   compat:
     name: pytest
-    needs: detect-ci-trigger
-    if: needs.detect-ci-trigger.outputs.triggered == 'true'  # for explicitly enabled ci
+    if: |
+      (github.event.pull_request.draft == false) ||
+      (github.event_name == 'workflow_dispatch') ||
+      (github.ref == 'refs/heads/master')
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
