--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -64,10 +64,12 @@ jobs:
 
       - name: Build docs
         shell: bash -l {0}
-        run: sphinx-build -W -n -b html -d build/doctrees doc build/html --keep-going
+        run: sphinx-build -W -n -b html -d build/doctrees doc build/html --keep-going -j auto
 
       - uses: actions/upload-artifact@v1
-        if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'release' && github.event.action == 'created')
+        if: |
+          startsWith(github.ref, 'refs/tags/') ||
+          (github.event_name == 'release' && github.event.action == 'created')
         with:
           name: weldx-docs
           path: build/html
