--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,6 +11,11 @@ on:
   schedule:
     - cron: '0 6 * * 1'
   workflow_dispatch:
+    inputs:
+      nbsphinx_execute:
+        description: 'run notebooks (always/never)'
+        required: true
+        default: 'always'
 
 jobs:
   build:
@@ -19,6 +24,8 @@ jobs:
       (github.event_name == 'workflow_dispatch') ||
       (github.ref == 'refs/heads/master')
     runs-on: ubuntu-latest
+    env:
+      nbsphinx_execute: 'always'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -62,9 +69,13 @@ jobs:
         shell: bash -l {0}
         run: ipython kernel install --user --name=weldx
 
+      - name: set notebook execution
+        if: (github.event_name == 'workflow_dispatch')
+        run: echo "nbsphinx_execute=${{ github.event.inputs.nbsphinx_execute }}"" >> $GITHUB_ENV
+
       - name: Build docs
         shell: bash -l {0}
-        run: sphinx-build -W -n -b html -d build/doctrees doc build/html --keep-going
+        run: sphinx-build -W -n -b html -d build/doctrees doc build/html --keep-going -D nbsphinx_execute=${{ env.nbsphinx_execute }}
 
       - uses: actions/upload-artifact@v2
         if: |
