fix debug examples

--- a/weldx/schemas/weldx.bam.de/weldx/debug/test_unit_validator-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/debug/test_unit_validator-0.1.0.yaml
@@ -46,9 +46,10 @@ properties:
     properties:
       value:
         type: number
-      unit:
+      units:
         type: string
     wx_unit: "m"
+    additionalProperties: false
 
   delta_prop:
     description: simple property with temperature deltas
