--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ install_requires =
     xarray >=0.15
     scipy >=1.4,!=1.6.0,!=1.6.1
     sympy >=1.6
-    pint >=0.11
+    pint >=0.11,<0.18
     asdf >=2.8
     bottleneck >=1.3
     boltons
