Restore old schema version

--- a/weldx/schemas/weldx.bam.de/weldx/core/mathematical_expression-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/mathematical_expression-0.1.0.yaml
@@ -32,9 +32,7 @@ properties:
     description: |
       List of constant parameters that to be set in the mathematical expression.
     type: object
-    anyOf:
-      - wx_property_tag: "asdf://weldx.bam.de/weldx/tags/core/data_array-0.1.*"
-      - wx_property_tag: "asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.*"
+      wx_property_tag: "asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.*"
 
 required: [expression]
 propertyOrder: [expression, parameters]
