--- a/weldx/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-0.1.0.yaml
@@ -160,7 +160,7 @@ properties:
     description: |
       Metadata container for additional user documentation of the experiment.
     type: object
-required: [equipment,workpiece,measurements,welding_current,welding_voltage,TCP]
+required: [process, equipment, workpiece, measurements, welding_current, welding_voltage, TCP]
 
 examples:
   -
